Removed unused class from item actions. Fixed omnibar plus button padding for application's font.

--- a/frontend/core/src/main/webapp/static/app/main/itemActions.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemActions.html
@@ -1,7 +1,7 @@
 <div ng-switch="itemType" ng-controller="ItemsController">
   <div class="item-actions" ng-switch-default>
     <ul class="button-row">
-      <li class="button-container left-of-three border-right">
+      <li class="button-container left-of-three">
         <button class="default-button" type="button" ng-click="itemToNote(item)">
           <span class="button-text">note</span>
         </button>
