--- a/frontend/phonegap/app/www/index.html
+++ b/frontend/phonegap/app/www/index.html
@@ -31,6 +31,7 @@
       var urlPrefix = 'https://ext.md';
       var html5Mode = false;
       var bindToFocusEvent = false;
+      var bindToResumeEvent = true;
       var useOfflineBuffer = true;
   </script>
 </head>
