Added bold Helvetica Neue font

--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -12,6 +12,7 @@
   <style type="text/css">
     @import url("//hello.myfonts.net/count/2a91b5");
     @font-face {font-family: 'HelveticaNeueLTStd-Lt';src: url('static/fonts/2A91B5_0_0.eot');src: url('static/fonts/2A91B5_0_0.eot?#iefix') format('embedded-opentype'),url('static/fonts/2A91B5_0_0.woff') format('woff'),url('static/fonts/2A91B5_0_0.ttf') format('truetype');}
+    @font-face {font-family: 'HelveticaNeueLT-Roman';src: url('static/fonts/2A91FB_0_0.eot');src: url('static/fonts/2A91FB_0_0.eot?#iefix') format('embedded-opentype'),url('static/fonts/2A91FB_0_0.woff') format('woff'),url('static/fonts/2A91FB_0_0.ttf') format('truetype');}
   </style>
   <link rel="stylesheet" href="static/css/em.css"/>
   <link rel="shortcut icon" href="static/favicon.ico"/>
