Bug fixes and refactoring: * Replaced drawer menu links with functions. Added toggleMenu call after location change to close drawer. * Datepicker next/previous week arrows sets new active day as a same weekday than earlier. * Renamed uncategorized tasks list to unsorted * Fix inbox height on large screen size.

--- a/frontend/core/src/main/webapp/static/app/auth/menu.html
+++ b/frontend/core/src/main/webapp/static/app/auth/menu.html
@@ -26,10 +26,10 @@
       </ul>
     </li>
     <li>
-      <a href="#/my/account">account</a>
+      <a href ng-click="gotoAccount()">account</a>
     </li>
     <li>
-      <a href="#/about">about</a>
+      <a href ng-click="gotoAbout()">about</a>
     </li>
     <li>
       <a href ng-click="logout()">logout</a>
