--- a/frontend/core/src/main/webapp/static/app/tasks/details.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/details.html
@@ -46,10 +46,10 @@
               </section>
             </div>
           </div>
-          <div class="swiper-slide" swiper-slide="tasks/details/uncategorized" slide-index="lists.length + contexts.length" ng-init="subtask = {}">
+          <div class="swiper-slide" swiper-slide="tasks/details/unsorted" slide-index="lists.length + contexts.length" ng-init="subtask = {}">
             <div class="inner-slide-content-container">
-              <section class="uncategorized">
-                <h3>uncategorized</h3>
+              <section class="unsorted">
+                <h3>unsorted</h3>
                 <div>              
                   <div class="inner-page-content-container" accordion>
                     <div ng-repeat="task in tasks | itemsFilter:{name:'unsorted'}" ng-init="subtask = {}">
