--- a/frontend/core/src/main/webapp/static/app/tasks/overview.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/overview.html
@@ -24,7 +24,7 @@
         </section>
 
         <section>
-          <h3><a href ng-click="gotoDetails('uncategorized')" class="page-header">uncategorized</a></h3>
+          <h3><a href ng-click="gotoDetails('unsorted')" class="page-header">unsorted</a></h3>
         </section>
 
       </div>
