Onboarding: * putAccoutPreferences method in AccountService * preferences to Web Storage * img folder for onboarding slide images

--- a/frontend/core/src/main/webapp/static/app/base/onboarding.html
+++ b/frontend/core/src/main/webapp/static/app/base/onboarding.html
@@ -1,22 +1,10 @@
 <div id="wrapper" onboarding-carousel>
   <ul id="onboarding-scroller">
     <li class="slide">
-      <ol>
-        <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-        <li>Aliquam tincidunt mauris eu risus.</li>
-        <li>Vestibulum auctor dapibus neque.</li>
-      </ol>
-
+      <img class="onboarding-slide" src="static/img/slide-1.png">
     </li>
     <li class="slide">
-      <span>
-        Bacon ipsum dolor sit amet quick banana tortilla panettone. Focaccia white matzo wholegrain. Biscuit ciabatta pumpernickel pita garlic roll corn toast bagel bun naan matzo hardtack wheat white. Croissant roll potato matzo. Lavash rye soda biscuit naan, sourdough hardtack ciabatta tortilla wholegrain crumpet quick boule.
-      </span>
-    </li>
-    <li class="slide">
-      <span>
-        McSweeney's forage drinking vinegar Portland tousled YOLO Thundercats. Butcher fixie Tonx, forage normcore organic quinoa four loko beard leggings hoodie cred. Irony Truffaut Godard 90's, keffiyeh yr flexitarian pork belly swag fixie cornhole.
-      </span>
+      <img class="onboarding-slide" src="static/img/slide-2.png">
     </li>
   </ul>
 </div>
