--- a/frontend/core/src/main/webapp/static/app/auth/menu.html
+++ b/frontend/core/src/main/webapp/static/app/auth/menu.html
@@ -26,7 +26,7 @@
       </ul>
     </li>
     <li>
-      <a href ng-click="gotoAccount()">account</a>
+      <a href ng-click="gotoAccount()" ng-class="getFeatureClass('account')">account</a>
     </li>
     <li>
       <a href ng-click="gotoAbout()">about</a>
