--- a/frontend/core/src/main/webapp/static/app/notes/addNote.html
+++ b/frontend/core/src/main/webapp/static/app/notes/addNote.html
@@ -2,7 +2,7 @@
   <div class="form-group">
     <label class="sr-only" for="noteTitle">title</label>
     <div>
-      <input type="text" class="simple-input" id="noteTitle" ng-model="newNote.title" placeholder="add note..." autocapitalize="none" autocorrect="off"></input>
+      <input type="text" class="simple-input" id="noteTitle" ng-model="newNote.title" placeholder="add note..." autocapitalize="none" maxlength="128" autocorrect="off"></input>
     </div>
   </div>
 </form>
