--- a/frontend/core/src/main/webapp/static/app/tasks/addTask.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/addTask.html
@@ -2,7 +2,7 @@
   <div class="form-group">
     <label class="sr-only" for="taskTitle">title</label>
     <div>
-      <input type="text" class="simple-input" id="taskTitle" ng-model="subtask.title" placeholder="add task..."></input>
+      <input type="text" class="simple-input" id="taskTitle" ng-model="subtask.title" placeholder="add task..." maxlength="128"></input>
     </div>
   </div>
 </form>
