--- a/frontend/core/src/main/webapp/static/app/notes/editNote.html
+++ b/frontend/core/src/main/webapp/static/app/notes/editNote.html
@@ -10,11 +10,11 @@
 
           <div class="form-group">
             <label class="sr-only" for="noteTitle">title</label>
-            <input type="text" class="simple-input" id="noteTitle" ng-model="note.title" placeholder="title..." required>
+            <input type="text" class="simple-input" id="noteTitle" ng-model="note.title" placeholder="title..." maxlength="128" required>
           </div>
           <div class="form-group">
             <label class="sr-only" for="noteDescription">content</label>
-            <textarea class="simple-input" id="noteDescription" ng-model="note.content" placeholder="content..." expanding-textarea></textarea>
+            <textarea class="simple-input" id="noteDescription" ng-model="note.content" placeholder="content..." maxlength="1024" expanding-textarea></textarea>
           </div>
           <div class="form-group vertical-buttons">
             <button type="submit" class="wide-button normal-button" ng-disabled="!noteEdit.$valid" ng-click="saveNote(note)">
