Menu to about page. Single page with menu CSS tweaks.

--- a/frontend/core/src/main/webapp/static/app/auth/menu.html
+++ b/frontend/core/src/main/webapp/static/app/auth/menu.html
@@ -29,7 +29,7 @@
       <a href ng-click="gotoAccount()" ng-class="getFeatureClass('account')">account</a>
     </li>
     <li>
-      <a href ng-click="gotoAbout()">about</a>
+      <a href ng-click="gotoAbout()" ng-class="getFeatureClass('about')">about</a>
     </li>
     <li>
       <a href ng-click="logout()">logout</a>
