Added delete to tags and lists. Fixed quite a few bugs with syncing etc.

--- a/frontend/core/src/main/webapp/static/app/base/listActions.html
+++ b/frontend/core/src/main/webapp/static/app/base/listActions.html
@@ -1,12 +1,17 @@
 <ul class="button-row">
-  <li class="button-container left-of-two border-right">
+  <li class="button-container left-of-three border-right">
     <button class="default-button" type="button" ng-click="editList(list)">
       more
     </button>
   </li>
-  <li class="button-container right-of-two">
+  <li class="button-container center-of-three">
     <button class="default-button" type="button" ng-click="archiveList(list)">
       archive
+    </button>
+  </li>
+  <li class="button-container right-of-three">
+    <button class="delete-button" type="button" ng-click="deleteList(list)">
+      delete
     </button>
   </li>
 </ul>
