--- a/frontend/core/src/main/webapp/static/app/tasks/taskCoreFields.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskCoreFields.html
@@ -28,7 +28,7 @@
   </div>
   <div class="form-group" ng-show="contexts.length">
     <label class="sr-only" for="taskContext">context</label>
-    <select class="simple-input swiper-no-swiping" id="taskContext" ng-model="task.relationships.context" ng-options="context.uuid as context.title for context in contexts = (tags | filter:{tagType:'context'})">
+    <select class="simple-input swiper-no-swiping" id="taskContext" ng-model="task.relationships.context" ng-options="context.uuid as context.title for context in contexts">
       <option value="">select context...</option>
     </select>
   </div>
