Drawer menu: * removed scrollable IScroll directive from drawer menu in static pages * initialize and refresh IScroll on ng-include $includeContentLoaded event in scrollable directive * removed active item highlight from drawer CSS
Support email and terms of service and privacy policy links to about page.

--- a/frontend/core/src/main/webapp/static/app/account/account.html
+++ b/frontend/core/src/main/webapp/static/app/account/account.html
@@ -1,4 +1,4 @@
-<div ng-if="isMobile" ng-include="'static/app/auth/menu.html'" id="mobile-menu" class="snap-drawer snap-drawer-left" scrollable></div>
+<div ng-if="isMobile" ng-include="'static/app/auth/menu.html'" id="mobile-menu" class="snap-drawer snap-drawer-left"></div>
 <div id="account-container" class="no-slides-container" ng-init="feature='account'" ng-controller="AccountController" snap-drawer>
   <header class="static-page-header" ng-include="'static/app/main/staticPageHeader.html'"></header>
   <section ng-hide="isDesktop && isMenuOpen" id="account" class="one-column-grid page" snap-drawer-drag>
