--- a/frontend/core/src/main/webapp/static/app/base/about.html
+++ b/frontend/core/src/main/webapp/static/app/base/about.html
@@ -1,5 +1,5 @@
-<div ng-if="isMobile" ng-include="'static/app/auth/menu.html'" id="mobile-menu" class="snap-drawer snap-drawer-left" scrollable></div>
-<div id="about-container" class="no-slides-container" ng-init="feature='about'" snap-drawer>
+<div ng-if="isMobile" ng-include="'static/app/auth/menu.html'" id="mobile-menu" class="snap-drawer snap-drawer-left"></div>
+<div id="about-container" class="no-slides-container" ng-init="feature='about'" ng-controller="AboutController" snap-drawer>
   <header class="static-page-header" ng-include="'static/app/main/staticPageHeader.html'"></header>
   <section ng-hide="isDesktop && isMenuOpen" id="about" class="one-column-grid page" snap-drawer-drag>
     <div class="column">
@@ -9,6 +9,15 @@
             <li class="simple-content">
               <h3>version</h3>
               <span ng-bind="extendedMindVersion"></span>
+            </li>
+            <li class="simple-content">
+              <a class="highlighted-link" href ng-click="gotoTermsOfService()">terms of service</a>
+              <a class="highlighted-link" href ng-click="gotoPrivacyPolicy()">privacy policy</a>
+            </li>
+            <li id="about-help" class="simple-content">
+              <small>in case you need any help, email
+                <a class="highlighted-link" href="mailto:support@ext.md"> support@ext.md</a>
+              </small>
             </li>
           </ul>
         </div>
