Undebugged version, new features not interfering with previous functionality

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -83,6 +83,7 @@
     <script src="static/app/auth/PasswordController.js"></script>
     <script src="static/app/auth/mainViewDirective.js"></script>
     <script src="static/app/auth/MenuController.js"></script>
+    <script src="static/app/auth/VerifyController.js"></script>
 
     <script src="static/app/account/AccountController.js"></script>
     <script src="static/app/account/AccountService.js"></script>
