--- a/frontend/core/src/main/webapp/static/app/auth/forgot.html
+++ b/frontend/core/src/main/webapp/static/app/auth/forgot.html
@@ -21,7 +21,7 @@
           </div>
         </form>
       </div>
-      <div ng-if="resetCodeExpires" id="instructions-sent" class="content">
+      <div ng-if="resetCodeExpires" id="instructions-success" class="content">
         <span class="instruction-text">
           instructions sent. when you have changed your password, press the button below to access your extended mind.
         </span>
