--- a/frontend/core/src/main/webapp/static/app/auth/waiting.html
+++ b/frontend/core/src/main/webapp/static/app/auth/waiting.html
@@ -1,24 +1,43 @@
 <div class="no-slides-container" ng-controller="WaitingController">
   <section id="waiting" class="one-column-grid fixed-height page">
-    <div class="column">
+    <div class="column" ng-class="coupon && 'waiting-coupon'">
       <div class="banner">
         <span class="icon-logo_with_text"></span>
       </div>
       <div class="content">
-        <div ng-if="user.email">
+        <div ng-if="invite" id="invite">
           <span class="instruction-text">
             we have sent you an email to join extended mind.</br>
             please click on the link in the email to sign up to the service.
           </span>
         </div>
-        <div ng-if="user.uuid">
+        <div ng-if="request" id="request">
           <span class="instruction-text">
             there are currently</br>
             <h1>{{user.inviteQueueNumber}}</h1>
             people before you on the extendedmind waiting list
           </span>
         </div>
-        <div class="button-container">
+        <div ng-if="coupon" id="coupon">
+          <span class="instruction-text">
+            there are currently</br>
+            <h1>{{user.inviteQueueNumber}}</h1>
+            people before you on the extendedmind waiting list
+          </span>
+          <form role="form" id="coupon-form" name="couponForm" submit="useCoupon()">
+            <div id="email" class="form-group">
+              <label for="coupon" class="sr-only">coupon</label>
+              <input type="text" name="coupon" class="simple-input" id="input-coupon" ng-model="user.coupon" placeholder="enter code..." required maxlength="16"/>
+            </div>
+            <div class="button-container form-group">
+              <button type="submit" id="waiting-button" class="wide-button normal-button" ng-click="useCoupon()" ng-disabled="!couponForm.$valid">
+                <span class="button-text">submit code</span>
+              </button>
+              <p ng-show="invalidCoupon" class="validation-error">invalid code</p>
+            </div>
+          </form>
+        </div>
+        <div ng-if="!coupon" class="button-container">
           <button type="submit" id="waiting-button" class="wide-button normal-button" ng-click="openEMBlogInNewWindow()">
             <span class="button-text">visit blog</span>
           </button>
