Undebugged coupon and automatic invite processes

--- a/frontend/core/src/main/webapp/static/app/account/account.html
+++ b/frontend/core/src/main/webapp/static/app/account/account.html
@@ -8,8 +8,8 @@
           <li class="simple-content">
             <h3>email</h3>
             <span>{{email}}</span>
-            <!-- <span id="email-verification-status" ng-if="isUserVerified">verified</span> -->
-            <!-- <span id="email-verification-status" ng-if="!isUserVerified">not verified</span> -->
+            <span id="email-verification-status" ng-if="isUserVerified">verified</span>
+            <span id="email-verification-status" ng-if="!isUserVerified">not verified</span>
           </li>
           <li class="simple-content">
             <a class="highlighted-link" href ng-click="gotoChangePassword()">change password</a>
