Inbox: * add item... * removed newest first order * fix inbox page not scrollable

--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -3,11 +3,11 @@
   <header ng-class="omnibarVisible && 'header-hidden'" class="page-header" ng-include="'static/app/main/pageHeader.html'"></header>
   <section ng-hide="isDesktop && isMenuOpen" id="inbox" class="two-column-grid page header-page" ng-controller="ItemsController" snap-drawer-drag>
     <div class="column">
-      <div class="page-heading swiper-no-swiping" ng-init="heading='inbox'" ng-include="'static/app/main/omnibar.html'"></div>
+      <div class="page-heading" ng-init="heading='inbox'" ng-include="'static/app/main/omnibar.html'"></div>
       <div ng-if="!omnibarVisible" id="inbox-page-content-container" class="content-container page-content-container no-heading-content-container">
         <div class="accordion-wrapper">
           <div class="inner-page-content-container" accordion>
-            <div ng-repeat="item in items | orderBy:'modified':true">
+            <div ng-repeat="item in items">
               <div accordion-title="item" edit-item="editItem(item)" edit-item-title="editItemTitle(item)" has-complete="false" toggle-complete></div>
               <div class="accordion-body" ng-if="isOpen(item)">
                 <div class="accordion-inner" ng-include="'static/app/main/itemActions.html'"></div>
@@ -15,6 +15,14 @@
             </div>
           </div>
         </div>
+        <form class="add-element" role="form" name="itemToInbox" ng-submit="addNewItem()" autocapitalize="none" autocorrect="off">
+          <div class="form-group">
+            <label class="sr-only" for="itemTitle">title</label>
+            <div>
+              <input type="text" class="simple-input" id="itemTitle" ng-model="item.title" placeholder="add item..." maxlength="128"></input>
+            </div>
+          </div>
+        </form>
       </div>
     </div>
     <aside class="column">
