Added platform specific classes to index.html, moved phonegap configuration to app root

--- a/frontend/phonegap/app/www/phonegap-android.html
+++ b/frontend/phonegap/app/www/phonegap-android.html
@@ -42,7 +42,7 @@
 </head>
 <body>
 
-    <div main-view/>
+    <div class="android" main-view/>
 
     <script src="static/em.min.js"></script>
 </body>
