--- a/frontend/phonegap/app/www/phonegap-ios.html
+++ b/frontend/phonegap/app/www/phonegap-ios.html
@@ -35,7 +35,7 @@
 </head>
 <body>
 
-    <div main-view/>
+    <div class="ios" main-view/>
 
     <script src="static/em.min.js"></script>
 </body>
