--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-    <div main-view ng-controller="MockController"></div>
+    <div class="web" main-view ng-controller="MockController"></div>
 
     <script src="static/lib/jquery/jquery.js"></script>
     <script src="static/lib/jasmine/jasmine.js"></script>
