icon refactoring, also fixes the missing >

--- a/frontend/core/src/main/webapp/static/app/auth/forgot.html
+++ b/frontend/core/src/main/webapp/static/app/auth/forgot.html
@@ -2,7 +2,7 @@
   <section id="forgot" class="one-column-grid fixed-height page">
     <div class="column">
       <div class="banner">
-        <span class="icon-logo_with_text"></span>
+        <span class="icon-logo-with-text"></span>
       </div>
       <div ng-if="showResetInstructions()" class="content">
         <span class="instruction-text">
