--- a/frontend/core/src/main/webapp/static/app/auth/launch.html
+++ b/frontend/core/src/main/webapp/static/app/auth/launch.html
@@ -2,7 +2,7 @@
   <section id="launch" class="one-column-grid fixed-height page">
     <div class="column">
       <div class="banner">
-        <span class="icon-logo_with_text"></span>
+        <span class="icon-logo-with-text"></span>
       </div>
       <div class="content">
         <form role="form" id="launch-form" name="launchForm" novalidate>
