--- a/frontend/core/src/main/webapp/static/app/auth/menu.html
+++ b/frontend/core/src/main/webapp/static/app/auth/menu.html
@@ -1,6 +1,6 @@
 <div id="menu-content" class="swiper-no-swiping" ng-controller="MenuController">
   <div ng-if="isMobile" class="banner">
-    <span class="icon-logo_only"></span>
+    <span class="icon-logo-only"></span>
   </div>
   <ul>
     <li>
