--- a/frontend/core/src/main/webapp/static/app/auth/waiting.html
+++ b/frontend/core/src/main/webapp/static/app/auth/waiting.html
@@ -2,7 +2,7 @@
   <section id="waiting" class="one-column-grid fixed-height page">
     <div class="column" ng-class="coupon && 'waiting-coupon'">
       <div class="banner">
-        <span class="icon-logo_with_text"></span>
+        <span class="icon-logo-with-text"></span>
       </div>
       <div class="content">
         <div ng-if="invite" id="invite">
