--- a/frontend/core/src/main/webapp/static/app/auth/welcome.html
+++ b/frontend/core/src/main/webapp/static/app/auth/welcome.html
@@ -2,7 +2,7 @@
   <section id="welcome" class="one-column-grid page">
     <div class="column">
       <div class="banner">
-        <span class="icon-logo_with_text"></span>
+        <span class="icon-logo-with-text"></span>
       </div>
       <div class="content">
         <div>welcome to your<br/>
