--- a/frontend/core/src/main/webapp/static/app/tasks/datepicker.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/datepicker.html
@@ -5,7 +5,7 @@
 
         <li id="datepicker-arrow-previous" class="justified-element" ng-if="isDesktop">
           <a href ng-click="previousWeek()">
-            <span class="icon-arrow_left"></span>
+            <span class="icon-arrow-left"></span>
           </a>
         </li>
 
@@ -62,7 +62,7 @@
 
         <li id="datepicker-arrow-next" class="justified-element" ng-if="isDesktop">
           <a href ng-click="nextWeek()">
-            <span class="icon-arrow_right"></span>
+            <span class="icon-arrow-right"></span>
           </a>
         </li>
         
