--- a/frontend/core/src/main/webapp/static/app/auth/verify.html
+++ b/frontend/core/src/main/webapp/static/app/auth/verify.html
@@ -2,7 +2,7 @@
   <section id="verify" class="one-column-grid fixed-height page">
     <div class="column">
       <div class="banner">
-        <span class="icon-logo_with_text"></span>
+        <span class="icon-logo-with-text"></span>
       </div>
       <div ng-if="emailVerified" id="instructions-success" class="content">
         <span class="instruction-text">
