--- a/frontend/core/src/main/webapp/static/app/base/listsOverview.html
+++ b/frontend/core/src/main/webapp/static/app/base/listsOverview.html
@@ -1,6 +1,6 @@
 <section ng-init="newList={title:undefined}" ng-controller="ListsController">
   <h3><a href class="page-header" swiper-click="gotoLists()">lists</a></h3>
-  <ul class="indent list-arrow-right">
+  <ul class="list-arrow-right">
     <li ng-if="lists && lists.length" ng-class="selected" ng-repeat="list in lists">
       <a class="text-muted click-to-slide" href swiper-click="gotoDetails(list.uuid)">
         <span class="link-title">{{list.title}}</span>
