Omnibar cross fade.

--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -4,7 +4,7 @@
   <section ng-hide="isDesktop && isMenuOpen" id="inbox" class="two-column-grid page header-page" ng-controller="ItemsController" snap-drawer-drag>
     <div class="column">
       <div class="page-heading" ng-init="heading='inbox'" ng-include="'static/app/main/omnibar.html'"></div>
-      <div ng-if="!omnibarVisible" id="inbox-page-content-container" class="content-container page-content-container no-heading-content-container">
+      <div ng-if="!omnibarVisible" id="inbox-page-content-container" class="content-container page-content-container no-heading-content-container omnibar-animation">
         <div class="accordion-wrapper">
           <div class="inner-page-content-container" accordion>
             <div ng-repeat="item in items">
