--- a/frontend/core/src/main/webapp/static/app/main/omnibar.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibar.html
@@ -10,7 +10,7 @@
       </div>
     </div>
   </form>
-  <div ng-if="omnibarVisible" class="omnibar-actions">
+  <div ng-if="omnibarVisible" class="omnibar-actions omnibar-animation">
     <ul class="button-row">
       <li class="button-container left-of-four border-right">
         <button class="normal-button" type="button" ng-click="clickOmnibarPlus(omnibarText)" ng-disabled="!omnibarHasText()">
