Added first version admin UI with possibility to delete and accept invite requests. Stats are also collected and printed on backend startup, which should get the server up and running right away without need for initialization requests.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -107,12 +107,16 @@
     <script src="static/app/main/PageNotFoundController.js"></script>
     <script src="static/app/main/itemsFilter.js"></script>
 
+    <script src="static/app/admin/AdminController.js"></script>
+    <script src="static/app/admin/AdminService.js"></script>
+
     <script src="static/lib/snap.js"></script>
     <script src="static/lib/fastclick.js"></script>
 
     <script src="test/AppTest.js"></script>
     <script src="test/mock/MockBackendService.js"></script>
     <script src="test/mock/MockAccountBackendService.js"></script>
+    <script src="test/mock/MockAdminBackendService.js"></script>
     <script src="test/mock/MockAuthBackendService.js"></script>
     <script src="test/mock/MockItemsBackendService.js"></script>
     <script src="test/mock/MockListsBackendService.js"></script>
