plus icon removed. placeholder left for x

--- a/frontend/core/src/main/webapp/static/app/main/pageHeader.html
+++ b/frontend/core/src/main/webapp/static/app/main/pageHeader.html
@@ -10,7 +10,7 @@
   <div id="omnibar-label-wrapper"><label for="{{getCurrentHeading()}}OmnibarInput" ng-style="{width: getLabelWidth()}">&nbsp;</label></div>
   <div id="plus-button-wrapper" ng-style="{width: (currentWidth - getLabelWidth()) * 0.5}">
     <button id="plus-button" type="button" ng-click="addNew()" alt="add new">
-      <span class="icon-plus"></span>
+      <span class="x"></span>
     </button>
   </div>
 </nav>
