--- a/frontend/core/src/main/webapp/static/app/main/omnibar.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibar.html
@@ -5,7 +5,7 @@
         <input type="text" ng-click="clickOmnibar(heading)" class="simple-input form-control omnibar-input" id="{{heading}}OmnibarInput" ng-model="omnibarText.title" dynamic-placeholder="{{omnibarPlaceholders[heading]}}" ng-keydown="omnibarKeyDown($event)" required>
       </div>
       <div ng-if="omnibarVisible" class="right-button-wrapper">
-        <button id="omnibarPlus" class="button" type="button" ng-click="clickOmnibarPlus(omnibarText)"><span class="icon-plus"></span>
+        <button id="omnibarPlus" class="button" type="button" ng-click="clickOmnibarPlus(omnibarText)"><span class="x"></span>
         </button>
       </div>
     </div>
